# django-dashboard-boilerplate

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  justfile  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.production.sh
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/core/: settings.py  urls.py  wsgi.py
src/custom_admin/: admin.py
src/front_page/: views.py
src/static/css/: main.css  source.css  tailwind.css
src/static/js/: sidebar.js
src/static/plugins/daisyui-5.0.2/: daisyui.min.css
src/static/plugins/tabler-1.3.2/: tabler.min.css  tabler.min.js
src/templates/: base.html  front_page.html
src/templates/account/: login.html
src/templates/cotton/: navbar.html  sidebar.html
src/templates/cotton/layout/: base.html  css.html  page_base.html
