[project]
name = "django-dashboard-boilerplate"
version = "0.1.0"
description = "Boilerplate to bootstrap django project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "django==5.1.6",
    "django-bootstrap5>=25.1",
    "django-browser-reload==1.18.0",
    "django-cotton==1.6.0",
    "django-typer==3.0.0",
    "django-unfold==0.50.0",
    "dotenv==0.9.9",
    "idna==3.10",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "semver==3.0.4",
    "shellingham==1.5.4",
    "sqlparse==0.5.3",
    "typer-slim==0.15.2",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
    "rust-just>=1.40.0",
]
